create user endpoint/docs
